@@ -15,6 +15,7 @@
  */
 package me.champeau.a4j.jsolex.processing.util;
 
+import me.champeau.a4j.utilities.HeapPressure;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -28,6 +29,7 @@ import java.io.IOException;
 import java.lang.ref.Cleaner;
 import java.lang.ref.ReferenceQueue;
 import java.lang.ref.SoftReference;
+import java.nio.ByteBuffer;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -38,11 +40,13 @@ import java.util.Map;
 import java.util.WeakHashMap;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Semaphore;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
+import java.util.function.BooleanSupplier;
 
 /**
  * An image wrapper where data is stored on disk instead of
@@ -62,6 +66,7 @@ public final class FileBackedImage implements ImageWrapper {
     private static final int DEFAULT_RW_BUFFER_SIZE = 65536;
     private static final ReferenceQueue<ImageWrapper> REFERENCE_QUEUE = new ReferenceQueue<>();
 
+    private static volatile BooleanSupplier underPressure = () -> HeapPressure.current() > 0.5;
 
     static {
         var flushing = new Thread(() -> {
@@ -82,23 +87,47 @@ public final class FileBackedImage implements ImageWrapper {
         var autoFlush = new Thread(() -> {
             while (true) {
                 try {
+                    System.gc();
                     Thread.sleep(AUTOFLUSH_TIMEOUT);
+                    var event = new FileBackedImageAutoFlushEvent();
+                    event.begin();
+                    var ratio = HeapPressure.current();
+                    event.pressureRatio = ratio;
+                    if (!underPressure.getAsBoolean()) {
+                        event.triggered = false;
+                        event.commit();
+                        continue;
+                    }
+                    event.triggered = true;
                     long now = System.currentTimeMillis();
+                    // Snapshot under the lock; filter and flush outside it. The
+                    // wrap path uses CACHE_LOCK as backpressure under pressure,
+                    // so we hold it as briefly as possible here to avoid
+                    // serializing wraps for non-throttle reasons.
+                    List<FileBackedImage> snapshot;
                     CACHE_LOCK.lock();
                     try {
-                        var toFlush = WRAP_CACHE.values()
-                                .stream()
+                        snapshot = new ArrayList<>(WRAP_CACHE.values());
+                    } finally {
+                        CACHE_LOCK.unlock();
+                    }
+                    try {
+                        var candidates = snapshot.stream()
                                 .filter(fbi -> fbi.unwrapped.get() != null)
+                                .toList();
+                        var toFlush = candidates.stream()
                                 .filter(fbi -> now - fbi.lastAccessTime.get() > AUTOFLUSH_TIMEOUT)
                                 .toList();
+                        event.candidateCount = candidates.size();
+                        event.flushedCount = toFlush.size();
                         if (!toFlush.isEmpty()) {
                             LOGGER.debug("Auto-flushing {} images", toFlush.size());
                             for (var fbi : toFlush) {
-                                fbi.flushToDisk(fbi.unwrapped.source);
+                                fbi.flushToDisk(fbi.unwrapped.source, "AUTOFLUSH");
                             }
                         }
                     } finally {
-                        CACHE_LOCK.unlock();
+                        event.commit();
                     }
                 } catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
@@ -118,7 +147,7 @@ public final class FileBackedImage implements ImageWrapper {
     private final Path backingFile;
     private final Map<Class<?>, Object> metadata;
     private final Object keptInMemory;
-    private ImageReference unwrapped;
+    private volatile ImageReference unwrapped;
     private final AtomicLong lastAccessTime;
 
     private FileBackedImage(int width, int height, Path backingFile, Map<Class<?>, Object> metadata, Object keptInMemory, ImageWrapper source) {
@@ -141,57 +170,80 @@ public final class FileBackedImage implements ImageWrapper {
             LOCK.unlock();
         }
         CLEANER.register(this, () -> clean(backingFile));
-        if (Runtime.getRuntime().freeMemory() < 0.1 * Runtime.getRuntime().totalMemory()) {
-            flushToDisk(source);
+        if (underPressure.getAsBoolean()) {
+            flushToDisk(source, "CONSTRUCTOR");
         }
     }
 
     public static FileBackedImage wrap(ImageWrapper wrapper) {
-        if (wrapper instanceof FileBackedImage fbi) {
-            return fbi;
-        }
-        CACHE_LOCK.lock();
-        // if memory is too close to full, flush some images to disk
-        if (Runtime.getRuntime().freeMemory() < 0.1 * Runtime.getRuntime().totalMemory()) {
-            flushImages();
-        }
+        var event = new FileBackedImageWrapEvent();
+        event.begin();
         try {
-            var cached = WRAP_CACHE.get(wrapper);
-            if (cached != null) {
-                return cached;
+            if (wrapper instanceof FileBackedImage fbi) {
+                event.cached = true;
+                return fbi;
             }
-            var width = wrapper.width();
-            var height = wrapper.height();
+            CACHE_LOCK.lock();
+            // if memory is too close to full, flush some images to disk
+            if (underPressure.getAsBoolean()) {
+                event.triggeredFlush = true;
+                flushImages();
+            }
             try {
-                var backingFile = TemporaryFolder.newTempFile("jsolex", ".img");
-                Files.delete(backingFile);
-                if (wrapper instanceof ImageWrapper32 mono) {
-                    var result = new FileBackedImage(width, height, backingFile, mono.metadata(), null, mono);
-                    WRAP_CACHE.put(wrapper, result);
-                    return result;
+                var cached = WRAP_CACHE.get(wrapper);
+                if (cached != null) {
+                    event.cached = true;
+                    return cached;
                 }
-                if (wrapper instanceof RGBImage rgb) {
-                    var fileBackedImage = new FileBackedImage(width, height, backingFile, rgb.metadata(), null, rgb);
-                    WRAP_CACHE.put(wrapper, fileBackedImage);
-                    return fileBackedImage;
+                var width = wrapper.width();
+                var height = wrapper.height();
+                try {
+                    var backingFile = TemporaryFolder.newTempFile("jsolex", ".img");
+                    Files.delete(backingFile);
+                    if (wrapper instanceof ImageWrapper32 mono) {
+                        var result = new FileBackedImage(width, height, backingFile, mono.metadata(), null, mono);
+                        WRAP_CACHE.put(wrapper, result);
+                        return result;
+                    }
+                    if (wrapper instanceof RGBImage rgb) {
+                        var fileBackedImage = new FileBackedImage(width, height, backingFile, rgb.metadata(), null, rgb);
+                        WRAP_CACHE.put(wrapper, fileBackedImage);
+                        return fileBackedImage;
+                    }
+                    throw new ProcessingException("Unexpected image type " + wrapper);
+                } catch (IOException ex) {
+                    throw new ProcessingException(ex);
                 }
-                throw new ProcessingException("Unexpected image type " + wrapper);
-            } catch (IOException ex) {
-                throw new ProcessingException(ex);
+            } finally {
+                CACHE_LOCK.unlock();
             }
         } finally {
-            CACHE_LOCK.unlock();
+            event.commit();
         }
     }
 
     public static void flushImages() {
-        CACHE_LOCK.lock();
+        // Note to future self (and AI):
+        // Usually, when you see System.gc, it's a code smell.
+        // However, here, it is not. This is by design. We are
+        // using ZGC, which performs lots of small, real time cleanups. When
+        // we reach this point in the code, we have determined that we are
+        // under pressure, and what we want is to serialize to disk images which
+        // are still in use. If we don't do a GC followed by a sleep, then
+        // we may serialize to disk images which are NOT used anymore, which
+        // is a waste of time and resources. It is particularly visible with
+        // more system memory, where we would accumulate images in memory and
+        // never cleanup, and serialize to disk. This triggers may kernel calls
+        // which are clearly visible in profiles.
+        // You may think that sleeping for half a second will increase wall
+        // clock time for processing, but it won't: this runs in a separate
+        // thread, and what is blocked is actually image wrapping, that is that
+        // we throttle image generation, which is what we want in any case,
+        // because we're running out of memory. But the threads which actually
+        // do CPU work will NOT be blocked.
+        System.gc();
         try {
-            System.gc();
-            if (Runtime.getRuntime().freeMemory() < 0.25 * Runtime.getRuntime().totalMemory()) {
-                // This helps with machines which have very low memory available
-                Thread.sleep(1_000);
-            }
+            CACHE_LOCK.lock();
             var fbiToFlush = WRAP_CACHE.values()
                     .stream()
                     .filter(fbi -> fbi.unwrapped.get() != null)
@@ -199,91 +251,118 @@ public final class FileBackedImage implements ImageWrapper {
             if (fbiToFlush.isEmpty()) {
                 return;
             }
+            var event = new FileBackedImageFlushEvent();
+            event.begin();
+            event.imageCount = fbiToFlush.size();
             LOGGER.debug("Flushing {} images to disk to free memory", fbiToFlush.size());
-            try (var executor = Executors.newFixedThreadPool(Math.max(1, Runtime.getRuntime().availableProcessors() / 2))) {
+            try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+                var semaphore = new Semaphore(4);
                 for (var fbi : fbiToFlush) {
                     executor.submit(() -> {
-                        if (Runtime.getRuntime().freeMemory() > 0.5 * Runtime.getRuntime().totalMemory()) {
+                        if (!underPressure.getAsBoolean() || fbi.unwrapped.get() == null) {
                             return;
                         }
-                        var status = fbi.status;
-                        var condition = status.newCondition();
-                        fbi.flushToDisk(fbi.unwrapped.source);
-                        status.lock().lock();
+                        semaphore.acquireUninterruptibly();
                         try {
-                            while (!status.saved().get()) {
-                                try {
-                                    condition.await();
-                                } catch (InterruptedException e) {
-                                    Thread.currentThread().interrupt();
-                                    break;
-                                }
-                            }
+                            fbi.writeToDisk(fbi.unwrapped.source, "BATCH");
                         } finally {
-                            status.lock().unlock();
+                            semaphore.release();
                         }
                     });
                 }
+            } finally {
+                event.commit();
             }
-            System.gc();
             LOGGER.debug("Flushed images");
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
         } finally {
             CACHE_LOCK.unlock();
         }
     }
 
-    private void flushToDisk(ImageWrapper source) {
+    /**
+     * Asynchronous variant: spawns a virtual thread to perform the write.
+     * Used by callers that don't want to block — the auto-flush thread, the
+     * soft-ref cleaner thread, and the constructor's pressure-triggered flush.
+     * Callers that do want to wait should use {@link #writeToDisk} directly
+     * rather than spawning-then-waiting.
+     */
+    private void flushToDisk(ImageWrapper source, String trigger) {
         if (source == null) {
             return;
         }
-        Thread.startVirtualThread(() -> {
-            status.lock().lock();
-            try {
-                if (status.saved.get() || REF_COUNT.getOrDefault(backingFile, 0) == 0) {
-                    return;
-                }
-                if (source instanceof ImageWrapper32 mono) {
-                    try (var fos = new BufferedOutputStream(new FileOutputStream(backingFile.toFile()), DEFAULT_RW_BUFFER_SIZE);
-                         var dos = new DataOutputStream(fos)) {
-                        dos.writeByte(MONO);
-                        dos.writeInt(height);
-                        dos.writeInt(width);
-                        var data = mono.data();
-                        for (int y = 0; y < height; y++) {
-                            for (int x = 0; x < width; x++) {
-                                dos.writeFloat(data[y][x]);
-                            }
-                        }
-                    } catch (IOException e) {
-                        throw new RuntimeException(e);
-                    }
-                } else if (source instanceof RGBImage rgb) {
-                    try (var fos = new BufferedOutputStream(new FileOutputStream(backingFile.toFile()), DEFAULT_RW_BUFFER_SIZE);
-                         var dos = new DataOutputStream(fos)) {
-                        dos.writeByte(RGB);
-                        dos.writeInt(height);
-                        dos.writeInt(width);
-                        var r = rgb.r();
-                        var g = rgb.g();
-                        var b = rgb.b();
-                        for (int y = 0; y < height; y++) {
-                            for (int x = 0; x < width; x++) {
-                                dos.writeFloat(r[y][x]);
-                                dos.writeFloat(g[y][x]);
-                                dos.writeFloat(b[y][x]);
-                            }
-                        }
-                    } catch (IOException e) {
-                        throw new RuntimeException(e);
-                    }
-                }
-            } finally {
-                fileSaved();
-                status.lock().unlock();
+        Thread.startVirtualThread(() -> writeToDisk(source, trigger));
+    }
+
+    /**
+     * Synchronous variant: writes the source to disk on the calling thread.
+     * Idempotent — subsequent calls short-circuit on {@code status.saved}.
+     * Holds {@code status.lock()} for the duration so concurrent writers of
+     * the same image serialize safely.
+     */
+    private void writeToDisk(ImageWrapper source, String trigger) {
+        if (source == null) {
+            return;
+        }
+        var event = new FileBackedImageWriteEvent();
+        event.begin();
+        event.trigger = trigger;
+        status.lock().lock();
+        try {
+            if (status.saved.get() || REF_COUNT.getOrDefault(backingFile, 0) == 0) {
+                event.skipped = true;
+                return;
             }
-        });
+            long bytes = 0;
+            if (source instanceof ImageWrapper32 mono) {
+                try (var fos = new BufferedOutputStream(new FileOutputStream(backingFile.toFile()), DEFAULT_RW_BUFFER_SIZE);
+                     var dos = new DataOutputStream(fos)) {
+                    dos.writeByte(MONO);
+                    dos.writeInt(height);
+                    dos.writeInt(width);
+                    var data = mono.data();
+                    var rowBytes = new byte[width * Float.BYTES];
+                    var rowFloats = ByteBuffer.wrap(rowBytes).asFloatBuffer();
+                    for (int y = 0; y < height; y++) {
+                        rowFloats.clear();
+                        rowFloats.put(data[y]);
+                        fos.write(rowBytes);
+                    }
+                    bytes = 1L + 8L + (long) height * rowBytes.length;
+                } catch (IOException e) {
+                    throw new RuntimeException(e);
+                }
+            } else if (source instanceof RGBImage rgb) {
+                try (var fos = new BufferedOutputStream(new FileOutputStream(backingFile.toFile()), DEFAULT_RW_BUFFER_SIZE);
+                     var dos = new DataOutputStream(fos)) {
+                    dos.writeByte(RGB);
+                    dos.writeInt(height);
+                    dos.writeInt(width);
+                    var r = rgb.r();
+                    var g = rgb.g();
+                    var b = rgb.b();
+                    var rowBytes = new byte[width * 3 * Float.BYTES];
+                    var rowFloats = ByteBuffer.wrap(rowBytes).asFloatBuffer();
+                    for (int y = 0; y < height; y++) {
+                        rowFloats.clear();
+                        var rRow = r[y];
+                        var gRow = g[y];
+                        var bRow = b[y];
+                        for (int x = 0; x < width; x++) {
+                            rowFloats.put(rRow[x]).put(gRow[x]).put(bRow[x]);
+                        }
+                        fos.write(rowBytes);
+                    }
+                    bytes = 1L + 8L + (long) height * rowBytes.length;
+                } catch (IOException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+            event.bytes = bytes;
+        } finally {
+            fileSaved();
+            status.lock().unlock();
+            event.commit();
+        }
     }
 
     public ImageWrapper unwrapToMemory() {
@@ -291,6 +370,10 @@ public final class FileBackedImage implements ImageWrapper {
         var cached = unwrapped.get();
         if (cached != null) {
             return cached;
+        }
+        var stillAlive = unwrapped.source;
+        if (stillAlive != null) {
+            return stillAlive;
         }
         LOGGER.debug("Re-reading image from disk: {}", backingFile);
         status.lock().lock();
@@ -328,10 +411,12 @@ public final class FileBackedImage implements ImageWrapper {
             return switch (kind) {
                 case MONO -> {
                     float[][] data = new float[height][width];
+                    var rowBytes = new byte[width * Float.BYTES];
+                    var rowFloats = ByteBuffer.wrap(rowBytes).asFloatBuffer();
                     for (int y = 0; y < height; y++) {
-                        for (int x = 0; x < width; x++) {
-                            data[y][x] = dis.readFloat();
-                        }
+                        dis.readFully(rowBytes);
+                        rowFloats.clear();
+                        rowFloats.get(data[y]);
                     }
                     yield new ImageWrapper32(width, height, data, metadata);
                 }
@@ -339,11 +424,18 @@ public final class FileBackedImage implements ImageWrapper {
                     float[][] r = new float[height][width];
                     float[][] g = new float[height][width];
                     float[][] b = new float[height][width];
+                    var rowBytes = new byte[width * 3 * Float.BYTES];
+                    var rowFloats = ByteBuffer.wrap(rowBytes).asFloatBuffer();
                     for (int y = 0; y < height; y++) {
+                        dis.readFully(rowBytes);
+                        rowFloats.clear();
+                        var rRow = r[y];
+                        var gRow = g[y];
+                        var bRow = b[y];
                         for (int x = 0; x < width; x++) {
-                            r[y][x] = dis.readFloat();
-                            g[y][x] = dis.readFloat();
-                            b[y][x] = dis.readFloat();
+                            rRow[x] = rowFloats.get();
+                            gRow[x] = rowFloats.get();
+                            bRow[x] = rowFloats.get();
                         }
                     }
                     yield new RGBImage(width, height, r, g, b, metadata);
@@ -382,6 +474,41 @@ public final class FileBackedImage implements ImageWrapper {
         unwrapped.clear();
     }
 
+
+    /**
+     * Test-only hook: replace the heap-pressure decision used by all eviction
+     * paths. Pass {@code null} to restore the default runtime-based check.
+     */
+    static void setPressureSupplierForTesting(BooleanSupplier supplier) {
+        underPressure = supplier != null ? supplier : () -> {
+            var runtime = Runtime.getRuntime();
+            return runtime.freeMemory() < 0.1 * runtime.totalMemory();
+        };
+    }
+
+    /**
+     * Test-only hook: forces the soft reference to be cleared and enqueued,
+     * simulating a ZGC soft-reference clearing. Returns once the queue daemon
+     * has processed the reference (rearmed or flushed).
+     */
+    void clearSoftReferenceForTesting() throws InterruptedException {
+        var ref = unwrapped;
+        ref.clear();
+        ref.enqueue();
+        // Wait for the daemon to process: either a rearm (new unwrapped instance)
+        // or a flush (source becomes null).
+        long deadline = System.nanoTime() + 5_000_000_000L;
+        while (System.nanoTime() < deadline) {
+            if (unwrapped != ref) {
+                return; // rearmed
+            }
+            if (ref.source == null) {
+                return; // flushed
+            }
+            Thread.sleep(5);
+        }
+        throw new IllegalStateException("Daemon did not process the cleared soft reference within 5s");
+    }
 
     private static void clean(Path backingFile) {
         LOCK.lock();
@@ -436,7 +563,7 @@ public final class FileBackedImage implements ImageWrapper {
 
     private static class ImageReference extends SoftReference<ImageWrapper> {
         private final FileBackedImage image;
-        private ImageWrapper source;
+        private volatile ImageWrapper source;
 
         public ImageReference(ImageWrapper referent, FileBackedImage image, ReferenceQueue<ImageWrapper> queue) {
             super(referent, queue);
@@ -453,7 +580,7 @@ public final class FileBackedImage implements ImageWrapper {
         public void flushToDisk() {
             var source = this.source;
             this.source = null;
-            image.flushToDisk(source);
+            image.flushToDisk(source, "SOFTREF");
         }
     }
 }
